Add key generator and fix Makefile

--- a/www/.env.example
+++ b/www/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=EMC
 APP_ENV=local
-APP_KEY=KQwKph39dc1qDuzp0T5iKKEYl6D5Yu0o
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
